# product-finder

./: Cargo.toml  Dockerfile  README.md  exemple.env
.github/workflows/: docker-image.yml  docker-publish.yml
product-finder/: Cargo.toml
resource/: stores.json
src/: main.rs
src/environment/: variables.rs
src/stores/: loader.rs  mod.rs  resource.rs  store.rs
