[package]
name = "xbox-finder"
version = "0.1.0"
edition = "2018"
authors = ["Douglas Mendes <mendes-barreto@live.com>"]

[dependencies]
dotenv = { version = "0.15" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
clokwerk = { version = "0.4.0-rc1" }