[package]
name = "product-finder"
version = "0.1.0"
edition = "2018"
authors = ["Douglas Mendes <mendes-barreto@live.com>"]

[dependencies]
rust-embed = { version = "6.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
dotenv = { version = "0.15" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
clokwerk = { version = "0.4.0-rc1" }